<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentStart="true"

        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/TPrimeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RevPrimeOutput"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/dots" />

    <TextView
        android:id="@+id/PrimeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PalindromOutput"
        android:layout_marginStart="7dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/dots" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="44dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ITI"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Calculate"
        android:layout_width="142dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/text1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="168dp"
        android:text="@string/cal" />

    <EditText
        android:id="@+id/Input"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="41dp"
        android:layout_toEndOf="@+id/text1"
        android:ems="6"
        android:hint="@string/iai"
        android:inputType="number" />

    <ToggleButton
        android:id="@+id/TACB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/textView5"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/textView5"
        android:checked="true"
        android:text="@string/tac" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/Calculate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/divider"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="274dp"
        android:text="@string/res"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="10dp"
        android:text="@string/pal"
        android:textColor="#000000"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="0dp"
        android:text="@string/PRM"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="7dp"
        android:text="@string/TPRM"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="243dp"
        android:text="@string/ToggleText"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PalindromOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="9dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="-4dp"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/dots" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="0dp"
        android:text="Reverse Prime :"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/RevPrimeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PrimeOutput"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/textView6"
        android:text="@string/dots" />

    <TextView
        android:id="@+id/TPB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Input"
        android:layout_toStartOf="@+id/Calculate"
        android:text=". . . . . . . ." />

    <TextView
        android:id="@+id/TBA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-70dp"
        android:layout_marginBottom="62dp"
        android:text=". . . . . . . ." />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />



</RelativeLayout>
